# willow_wbt

./: .gitignore  .gitmodules  CLAUDE.md  README.md  install.sh  pyproject.toml
cfg/deployment/: unitree.yaml
cfg/inference/: holosoma.yaml  holosoma_custom.yaml  holosoma_custom_inference.yaml
cfg/processing/: holosoma_prep.yaml
cfg/retargeting/: gmr.yaml  holosoma.yaml  holosoma_custom.yaml  holosoma_custom_retargeting.yaml
cfg/training/: holosoma.yaml  holosoma_custom.yaml  holosoma_custom_training.yaml
data/00_raw_datasets/: README.md
data/01_retargeted_motions/: README.md
scripts/: README.md  activate_willow.sh  deploy.py  infer.py  retarget.py  train.py
scripts/wrappers/: gmr_fk.py  lafan_to_joints.py  omomo_to_intermimic.py  omomo_to_joints.py  sfu_to_joints.py
specs/: README.md
specs/raw_datasets/: LAFAN.md  OMOMO.md  SFU.md
specs/retargeting/: GMR.md  holosoma_retargeting.md
specs/robots/: G1.md
specs/training/: holosoma.md
src/motion_convertor/: README.md  TODO.md  __init__.py  _config.py  _subprocess.py  connectors.py
src/motion_convertor/_to_retargeter_input/: lafan_holosoma.py  omomo_holosoma.py  sfu_holosoma.py
src/motion_convertor/_to_trainer_input/: gmr_holosoma.py  holosoma_custom_holosoma.py  holosoma_holosoma.py
src/motion_convertor/_to_unified_input/: lafan.py  omomo.py  sfu.py
src/motion_convertor/_to_unified_output/: gmr.py  holosoma.py
src/motion_convertor/to_retargeter_input/: lafan_holosoma.py  omomo_holosoma.py  sfu_holosoma.py
tests/: test_deploy.py  test_infer.py
(+5 files in other folders)
